saves/test/demo_full_20240802_193545/fsm3onehot/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp fsm3onehot_tb.v fsm3onehot.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
fsm3onehot_tb.v:56: $finish called at 8 (1s)

iverilog cmd 2 error:

